--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,2 @@
-@razroo:registry=https://npm.pkg.github.com
+@razroo:registry=https://npm.pkg.github.com/
+//npm.pkg.github.com/:_authToken=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
