--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@razroo/ng-terminal",
   "version": "0.0.0",
-  "repository": "git://github.com/razroo/ng-terminal.git",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/razroo/ng-terminal.git"
+  },
   "scripts": {
     "prestart": "npm run build",
     "prepublish": "npm run license && npm run lib:build:prod && copyfiles README.md dist/ng-terminal",
@@ -21,7 +24,6 @@
     "license": "license-checker > LICENSE-THIRD-PARTY",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.16",
     "@angular/cdk": "^12.2.13",
@@ -68,5 +70,14 @@
     "tslint": "~6.1.0",
     "typescript": "~4.3.5",
     "copyfiles": "^2.4.1"
-  }
+  },
+  "description": "[![Build Status](https://app.travis-ci.com/qwefgh90/ng-terminal.svg?branch=master)](https://app.travis-ci.com/qwefgh90/ng-terminal) [![version](https://badge.fury.io/js/ng-terminal.svg)](https://www.npmjs.com/package/ng-terminal) [![GitHub license](https://img.shields.io/badge/license-MIT-blue.svg)]()",
+  "bugs": {
+    "url": "https://github.com/razroo/ng-terminal/issues"
+  },
+  "homepage": "https://github.com/razroo/ng-terminal#readme",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
